# apialerts-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: config.rs  event.rs  lib.rs  main.rs
