[package]
name = "apialerts"
version = "0.1.0"
edition = "2021"
authors = ["API Alerts <support@apialerts.com>"]
edition = "2021"
description = "A Rust client for the API Alerts service"
license = "MIT" 
repository = "https://github.com/apialerts/apialerts-rust"
keywords = ["api", "alerts", "notification"]
categories = ["api-bindings", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.6", features = ["json"] }
