[package]
name = "apialerts"
version = "1.0.0"
edition = "2021"
authors = ["API Alerts <support@apialerts.com>"]
description = "A Rust client for the API Alerts service"
license = "MIT" 
repository = "https://github.com/apialerts/apialerts-rust"
keywords = ["api", "alerts", "notification"]
categories = ["api-bindings", "web-programming"]

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
async-std = { version = "1.0", features = ["attributes"] }
futures = "0.3"
